<resources>
    <string name="app_name">Save My Cards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="aboutText">Save My Cards v1.0</string>
    <string name="hit_exp">67/89</string>
    <string name="hint_cvv">012</string>
    <string name="hint_number">9999-9999-9999-9999</string>
    <string name="card_name">Card Name</string>
</resources>
