<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="buu.s59160937.savemycards.ViewCardFragment">

    <data>

    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLast"
        android:orientation="vertical"
        android:padding="12dp"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/cardbackground" />

            <TextView
                android:id="@+id/Name"
                style="@style/name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="129dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorButtonNormal"
                tools:text="TextView" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_number" />

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hint_number"
            android:inputType="textPersonName"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expire_date" />

                <EditText
                    android:id="@+id/expireDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hit_exp"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv" />

                <EditText
                    android:id="@+id/CVV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hint_cvv"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>